--- a/package.json
+++ b/package.json
@@ -53,7 +53,11 @@
     "format": "prettier --write src/**/*.{js,jsx}",
     "start": "npm run develop",
     "serve": "gatsby serve",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\""
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\"",
+    "preinstall": "npx npm-force-resolutions"
+  },
+  "resolutions": {
+    "gatsby-source-graphql-universal": "3.3.0"
   },
   "repository": {
     "type": "git",
